prevent nav from collapsing on smaller screens

--- a/assets/source/3.0/sass/navigation/_header.scss
+++ b/assets/source/3.0/sass/navigation/_header.scss
@@ -12,6 +12,14 @@
   color: $color-black;
 }
 
+@include mq(map_get($breakpoints-map, "xs"), map_get($breakpoints-map, "md")) {
+    #fixed-header {
+        .c-nav {
+            flex-direction: column;
+        }
+    }
+}
+
 @include mq(md) {
     .c-header.is-sticky {
         position: fixed;
